Use dvh to fix bug with scroll on mobile

--- a/app/page.css
+++ b/app/page.css
@@ -1,4 +1,4 @@
 .home-page-container {
-  height: 100vh; /* or any specific height */
+  height: 100dvh;
   overflow-y: auto;
 }
